--- a/app/index.html
+++ b/app/index.html
@@ -589,10 +589,10 @@
                     <a href="index.html" class="logo"><img src="img/logo2.gif" alt=""></a>
 
                     <ul class="footer-menu">
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">Преимущества</a></li>
-                        <li><a href="#">Решения</a></li>
-                        <li><a href="#">Контакты</a></li>
+                        <li><a href="#about" class="go_to">О нас</a></li>
+                        <li><a href="#advantages" class="go_to">Преимущества</a></li>
+                        <li><a href="#solution" class="go_to">Решения</a></li>
+                        <li><a href="#contacts" class="go_to">Контакты</a></li>
                     </ul>
 
                     <div class="footer-contacts">
