--- a/app/index.html
+++ b/app/index.html
@@ -880,7 +880,7 @@
                         </label>
 
                         <label class="form-group">
-                            <input type="text" class="form-control" placeholder="Ваш телефон" name="phone">
+                            <input type="text" class="form-control" placeholder="Ваш телефон" name="phone" required>
                             <span class="form-icon"><img src="img/phone2.png" alt=""></span>
                         </label>
 
@@ -888,10 +888,10 @@
                             <input class="checkbox-inp" type="checkbox" name="checkbox">
                             <span class="checkbox-custom"></span>
                             <span class="label">Я согласен с <a href="#"
-                                                                class="links">пользовательским соглашеием</a></span>
+                                                                class="links">пользовательским соглашением</a></span>
                         </label>
 
-                        <button class="btn btn-accent" type="button">Оставить заявку</button>
+                        <button class="btn btn-accent" type="submit">Оставить заявку</button>
                     </form>
                 </div>
 
@@ -957,7 +957,7 @@
             <div class="row">
                 <div class="col-12 footer-bottom__wrapper">
                     <div class="footer-text">
-                        <p>Политика конфиденциальности</p>
+                        <a href="doc.docx" target="_blank">Пользовательское соглашение</a>
                         <p>© Copyright 2020</p>
                     </div>
                     <div class="footer-text">
@@ -965,7 +965,7 @@
                             публичной офертой, определяемой положениями ст. 437 ГК РФ.</p>
                     </div>
                     <div class="footer-text">
-                        <p>Разрабокта сайта:</p>
+                        <p>Разработка сайта:</p>
                         <a href="https://webagregator.ru" target="_blank" class="links">Вебагрегатор</a>
                     </div>
 
@@ -1022,11 +1022,11 @@
                     <label class="checkbox">
                         <input class="checkbox-inp" type="checkbox" name="checkbox">
                         <span class="checkbox-custom"></span>
-                        <span class="label">Я согласен с <a href="#"
-                                                            class="links">пользовательским соглашеием</a></span>
+                        <span class="label">Я согласен с <a href="doc.docx" target="_blank"
+                                                            class="links">пользовательским соглашением</a></span>
                     </label>
 
-                    <button class="btn btn-accent" type="button">Оставить заявку</button>
+                    <button class="btn btn-accent" type="submit">Оставить заявку</button>
                 </form>
             </div>
 
