--- a/app/index.html
+++ b/app/index.html
@@ -689,7 +689,7 @@
                 <div class="advice-question color-accent">Подход с умом</div>
 
                 <div class="advice-answer">
-                    <strong>Частотный преобразователь.</strong>
+                    <p>Частотный преобразователь.</p>
                     <p>
                         Чудесное устройство, которое позволяет Вам экономить электроэнергию на 20-40% в месяц!</p>
                     <p>Увеличивает ресурс оборудования и дает возможность регулировать давление на каждом
@@ -887,7 +887,7 @@
                         <label class="checkbox">
                             <input class="checkbox-inp" type="checkbox" name="checkbox">
                             <span class="checkbox-custom"></span>
-                            <span class="label">Я согласен с <a href="#"
+                            <span class="label">Я согласен с <a href="doc.docx" target="_blank"
                                                                 class="links">пользовательским соглашением</a></span>
                         </label>
 
